@@ -1,3 +1,11 @@
+2005-11-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R: One can build term-document matrices if
+	nessecary (with buildTDM(...)) and fill the field tdm from a text
+	document collection with it.
+
+	* R/textmatrix.R: Wrote S4 class for term-document matrices.
+
 2005-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: We now can read in a whole XML file with several
